--- a/data/SPRSound/explore_json.ipynb
+++ b/data/SPRSound/explore_json.ipynb
@@ -248,6 +248,26 @@
    "source": [
     "sns.catplot(x='age', y='label_12', hue='gender', kind='violin', inner=\"stick\", split=True, data=df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Freq characteristics of each type\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "### Recording length of each type\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
